test/src/e2e_vm_tests/test_programs/should_pass/language/const_decl_literal/src/main.sw
script;

const GLOBAL_VAL: u64 = 99;

fn main() -> u64 {
    const LOCAL_VAL = 1;
    GLOBAL_VAL + LOCAL_VAL
}
