test/src/e2e_vm_tests/test_programs/should_fail/const_nonconst_init/src/main.sw
script;

fn bla(x: u64) -> u64 {
    x + 1
}

fn main() -> u64 {
    const X = bla(0);
    X
}
